# INSTAFollows-Ultimate

./: .gitignore  LICENSE  README.md  build-release.bat  dev.bat  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.bat  instafollows_session.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  network.rs
src/components/: OnboardingWizard.tsx  ProxiedAvatar.tsx  ThreatMeter.tsx  TraitorList.tsx  ui.tsx
src/i18n/: de.json  en.json  es.json  fr.json  index.tsx  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
